@@ -1,8 +1,11 @@
-README - 12/02/2003
+README - 12/13/2003
 -------------------
 
 CHANGES IN Mini-XML 1.3
 
+	- mxmlLoadString/File() would crash when loading non-
+	  conformant XML data under an existing parent (top)
+	  node.
 	- Fixed several bugs in the mxmldoc utility.
 	- Added new error callback function to catch a variety
 	  of errors and log them to someplace other than stderr.
